--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,8 @@
  	<title> Hello COursera</title>
  </head>
  <body>
- <h1>Hello Coursera!</h1>
+ <h1>k.</h1>
+ <h1>idk</h1>
+ <h1>bye.</h1>
  </body>
  </html>
