Small change again

--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,9 @@
  <!DOCTYPE html>
  <html>
  <head>
- 	<title> Hello COursera</title>
+ 	<title> Hello Coursera</title>
  </head>
  <body>
  <h1>k.</h1>
- <h1>idk</h1>
- <h1>bye.</h1>
  </body>
  </html>
